gcc/testsuite/gm2/iso/fail/badparam2.mod
IMPLEMENTATION MODULE badparam2 ;

PROCEDURE foo (c: CARDINAL) ;
BEGIN
END foo ;

END badparam2.
